2010-06-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: DestroyStream: fetch the correct member of the stream to get the
	NPStreamRequest.

2010-05-29  Chris Toshok  <toshok@ximian.com>

	* npstream-request.cpp (UrlNotify): once we unref don't go poking
	at ourselves.

2010-05-28  Jeffrey Stedfast  <fejj@novell.com>

	* plugin-class.h.in: Added some helper macros to get ints and
	doubles from an NPVariant no matter which numeric type it is.

	* plugin-utils.cpp (decode_arg_ctype): For 'd', return a
	bitwise-or of Double and Int32.

	* plugin-class.cpp (MoonlightMultiScaleImageObject::Invoke):
	Changed over to use the simpler NPVARIANT_AS_DOUBLE() macro and to
	revert the check_arg_list() string code back to "ddd" since 'd'
	now matches int32 and double.

2010-05-28  Jeffrey Stedfast  <fejj@novell.com>

	* plugin-class.cpp (MoonlightMultiScaleImageObject::Invoke): Fixed
	to properly handle integer args for ZoomAboutLogicalPoint().

2010-05-27 Sebastien Pouliot  <sebastien@ximian.com>

	* plugin.cpp: Once download is complete check the policy on the 
	final URI (not the original one) to cover cases where redirection
	was used

2010-05-26  Sebastien Pouliot  <sebastien@ximian.com>

	* plugin-class.cpp: Cover special case where OnLoad is emmitted for 
	xdomain apps, without a sender or data, if CrossDomainAccess.
	ScriptableOnly is specified and if EnabledHtmlAccess == true

2010-05-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp: Re-add a check for not allowing downloaders to be used for
	detached surfaces (our own test #381 / test-dead-downloaders.html).

2010-05-25  Andreia Gaita  <avidigal@novell.com>

	* plugin.cpp: remove reentrant hack for chrome, fixed upstream
	(see http://code.google.com/p/chromium/issues/detail?id=32797)

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Updated.

2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Updated.
